--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -1,63 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/item_layout"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
-        android:id="@+id/view_background"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/bg_row_background">
+    <data>
 
-        <ImageView
-            android:id="@+id/delete_icon"
-            android:layout_width="@dimen/ic_delete"
-            android:layout_height="@dimen/ic_delete"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="@dimen/padd_10"
-            android:src="@drawable/ic_delete" />
+        <import type="android.widget.CompoundButton" />
 
-    </RelativeLayout>
+        <variable
+            name="task"
+            type="com.yandex.todo.data.api.model.task.Task" />
 
-    <RelativeLayout
-        android:id="@+id/view_foreground"
+        <variable
+            name="viewmodel"
+            type="com.yandex.todo.ui.home.HomeViewModel" />
+    </data>
+
+    <FrameLayout
+        android:id="@+id/item_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:padding="12dp">
+        android:onClick="@{() -> viewmodel.openTask(task.id)}">
 
-        <CheckBox
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/view_background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/bg_row_background">
+
+            <ImageView
+                android:id="@+id/delete_icon"
+                android:layout_width="@dimen/ic_delete"
+                android:layout_height="@dimen/ic_delete"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="@dimen/padd_10"
+                android:src="@drawable/ic_delete" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/view_foreground"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/checkbox"/>
+            android:background="@android:color/white"
+            android:padding="12dp">
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/checkbox"
-            android:ellipsize="end"
-            android:layout_centerVertical="true"
-            android:fontFamily="sans-serif-medium"
-            tools:text="Test"
-            android:maxLines="1"
-            android:textColor="@color/item_name" />
+            <CheckBox
+                android:id="@+id/checkbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="@{(view) -> viewmodel.completeTask(task, ((CompoundButton)view).isChecked())}"
+                android:checked="@{task.done}"
+                android:layout_centerVertical="true" />
 
-        <ImageView
-            android:id="@+id/info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="8dp"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_info"
-            android:visibility="gone"
-            android:textColor="@color/colorAccent"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_toStartOf="@id/info"
+                android:layout_toEndOf="@id/checkbox"
+                android:ellipsize="end"
+                android:fontFamily="sans-serif-medium"
+                android:maxLines="3"
+                android:text="@{task.text}"
+                app:completedTask="@{task.done}"
+                android:textColor="@color/item_name"
+                tools:text="Test" />
 
-    </RelativeLayout>
-</FrameLayout>
+            <ImageView
+                android:id="@+id/info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="8dp"
+                android:src="@drawable/ic_info"
+                android:textColor="@color/colorAccent"
+                android:textStyle="bold"
+                android:visibility="gone" />
+
+        </RelativeLayout>
+    </FrameLayout>
+</layout>
